--- a/default.css
+++ b/default.css
@@ -1,2 +1,6 @@
 /*font*/
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+
+body {
+font-family: 'Noto Sans Japanese', serif;
+}
